--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <div class="tabs">
         <div class="tab-1">
-          <button class="tab-img num-1"><img src="/images/image-product-1-thumbnail.jpg" alt=""></button>
+          <button class="tab-img num-1 active"><img src="/images/image-product-1-thumbnail.jpg" alt=""></button>
         </div>
         <div class="tab-2">
           <button class="tab-img num-2"><img src="/images/image-product-2-thumbnail.jpg" alt=""></button>
@@ -90,37 +90,39 @@
 
     </div>
     <div class="container">
-      <div class="info">
-        <h3>Sneaker Company</h3>
-        <h1>Fall Limited Edition Sneakers</h1>
-        <p>These low-profile sneakers are your      perfect casual wear companion. Featuring a 
-          durable rubber outer sole, they'll     withstand everything the weather can offer.
-        </p>
-      </div>
-      <div class="price">
-        <div class="real-price">
-          <h1>$125.00</h1>
-          <span>50%</span>
+      <div class="detials">
+        <div class="info">
+          <h3>Sneaker Company</h3>
+          <h1>Fall Limited Edition Sneakers</h1>
+          <p>These low-profile sneakers are your      perfect casual wear companion. Featuring a 
+            durable rubber outer sole, they'll     withstand everything the weather can offer.
+          </p>
         </div>
-        <div class="with-cobon">
-          <h3>$250.00</h3>
+        <div class="price">
+          <div class="real-price">
+            <h1>$125.00</h1>
+            <span>50%</span>
+          </div>
+          <div class="with-cobon">
+            <h3>$250.00</h3>
+          </div>
         </div>
-      </div>
-      <div class="parent">
-      <div class="number">
-        <div class="minus">
-          <button class="minus-btn change"><img src="/images/icon-minus.svg" alt=""></button>
+        <div class="parent">
+        <div class="number">
+          <div class="minus">
+            <button class="minus-btn change"><img src="/images/icon-minus.svg" alt=""></button>
+          </div>
+          <div class="the-num">
+            <h3 class="num-head">0</h3>
+          </div>
+          <div class="plus">
+          <button class="plus-btn change"><img src="/images/icon-plus.svg" alt=""></button>
+          </div>
         </div>
-        <div class="the-num">
-          <h3 class="num-head">0</h3>
+        <div class="add-button">
+          <button class="add">Add to cart</button>
         </div>
-        <div class="plus">
-        <button class="plus-btn change"><img src="/images/icon-plus.svg" alt=""></button>
         </div>
-      </div>
-      <div class="add-button">
-        <button class="add">Add to cart</button>
-      </div>
       </div>
     </div>
   </div>
@@ -150,7 +152,9 @@
     </div>
   </div>
 
-  <!-- <div class="overlayer"></div> -->
+  <!-- OVERLAYER -->
+  <div class="overlayer"></div>
+  
   <script src="/app/js/app.js"></script>
 </body>
 </html>
