fix images problem

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | E-commerce product page</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/dist/style.css">
+  <link rel="stylesheet" href="./dist/style.css">
 
   <!-- GOOGEL FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,13 +22,13 @@
     <div class="container">
       <nav class="nav">
         <ul class="nav__list">
-          <img class="open-menu" src="images/icon-menu.svg" alt="">
+          <img class="open-menu" src="./images/icon-menu.svg" alt="">
           <a href="#" class="nav__logo">
-            <img src="/images/logo.svg" alt="LOGO" title="LOGO">
+            <img src="./images/logo.svg" alt="LOGO" title="LOGO">
           </a>
           <div class="link">
             <ul class="link__list">
-              <img class="close" src="/images/icon-close.svg" alt="">
+              <img class="close" src="./images/icon-close.svg" alt="">
               <li><a href="#">Collections</a></li>
               <li><a href="#">Men</a></li>
               <li><a href="#">Women</a></li>
@@ -39,14 +39,14 @@
           <div class="link__user">
             <div class="cart">
               <span class="product-span"></span>
-              <img class="cart-img" src="/images/icon-cart.svg" alt="CART" title="CART">
+              <img class="cart-img" src="./images/icon-cart.svg" alt="CART" title="CART">
               <div class="cart__box">
                 <span class="empty">Your cart is empty</span>
               </div>
             </div>
             <div class="avatar">
               <a href="#" class="avatar-img">
-                <img src="/images/image-avatar.png" alt="AVATAR" title="AVATAR">
+                <img src="./images/image-avatar.png" alt="AVATAR" title="AVATAR">
               </a>
             </div>
           </div>
@@ -59,34 +59,34 @@
   <div class="hero">
     <div class="slidercontainer">  
       <div class="show-slide">  
-        <img src="images/image-product-1.jpg" />  
+        <img src="./images/image-product-1.jpg" />  
       </div>  
       <div class="show-slide">  
-        <img src="images/image-product-2.jpg" />  
+        <img src="./images/image-product-2.jpg" />  
       </div>  
       <div class="show-slide">  
-        <img src="images/image-product-3.jpg" />  
+        <img src="./images/image-product-3.jpg" />  
       </div>  
       <div class="show-slide">  
-        <img src="images/image-product-4.jpg" />  
+        <img src="./images/image-product-4.jpg" />  
       </div>
 
       <div class="tabs">
         <div class="tab-1">
-          <button class="tab-img num-1 active"><img src="/images/image-product-1-thumbnail.jpg" alt=""></button>
+          <button class="tab-img num-1 active"><img src="./images/image-product-1-thumbnail.jpg" alt=""></button>
         </div>
         <div class="tab-2">
-          <button class="tab-img num-2"><img src="/images/image-product-2-thumbnail.jpg" alt=""></button>
+          <button class="tab-img num-2"><img src="./images/image-product-2-thumbnail.jpg" alt=""></button>
         </div>
         <div class="tab-3">
-          <button class="tab-img num-3"><img src="/images/image-product-3-thumbnail.jpg" alt=""></button>
+          <button class="tab-img num-3"><img src="./images/image-product-3-thumbnail.jpg" alt=""></button>
         </div>
         <div class="tab-4">
-          <button class="tab-img num-4"><img src="/images/image-product-4-thumbnail.jpg" alt=""></button>
+          <button class="tab-img num-4"><img src="./images/image-product-4-thumbnail.jpg" alt=""></button>
         </div>
       </div>
-      <a class="slide left" onclick="nextSlide(-1)"><img src="/images/icon-previous.svg" alt=""></a>  
-      <a class="slide right" onclick="nextSlide(1)"><img src="/images/icon-next.svg" alt=""></a>
+      <a class="slide left" onclick="nextSlide(-1)"><img src="./images/icon-previous.svg" alt=""></a>  
+      <a class="slide right" onclick="nextSlide(1)"><img src="./images/icon-next.svg" alt=""></a>
 
     </div>
     <div class="container">
@@ -110,13 +110,13 @@
         <div class="parent">
         <div class="number">
           <div class="minus">
-            <button class="minus-btn change"><img src="/images/icon-minus.svg" alt=""></button>
+            <button class="minus-btn change"><img src="./images/icon-minus.svg" alt=""></button>
           </div>
           <div class="the-num">
             <h3 class="num-head">0</h3>
           </div>
           <div class="plus">
-          <button class="plus-btn change"><img src="/images/icon-plus.svg" alt=""></button>
+          <button class="plus-btn change"><img src="./images/icon-plus.svg" alt=""></button>
           </div>
         </div>
         <div class="add-button">
@@ -136,16 +136,16 @@
     </div>
     <div class="image">  
       <div class="lightbox-show-slide" onclick="displayLightBox()">
-        <img src="images/image-product-1.jpg" />  
+        <img src="./images/image-product-1.jpg" />  
       </div>  
       <div class="lightbox-show-slide" onclick="displayLightBox()">  
-        <img src="images/image-product-2.jpg" />  
+        <img src="./images/image-product-2.jpg" />  
       </div>  
       <div class="lightbox-show-slide" onclick="displayLightBox()">  
-        <img src="images/image-product-3.jpg" />  
+        <img src="./images/image-product-3.jpg" />  
       </div>  
       <div class="lightbox-show-slide" onclick="displayLightBox()">  
-        <img src="images/image-product-4.jpg" />  
+        <img src="./images/image-product-4.jpg" />  
       </div>
       <a class="left" onclick="nextLightBoxSlide(-1)"><svg width="12" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg></a>  
       <a class="right" onclick="nextLightBoxSlide(1)"><svg width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg></a>
@@ -155,6 +155,6 @@
   <!-- OVERLAYER -->
   <div class="overlayer"></div>
   
-  <script src="/app/js/app.js"></script>
+  <script src="./app/js/app.js"></script>
 </body>
 </html>
